--- a/assets/style.css
+++ b/assets/style.css
@@ -7,13 +7,13 @@ body {
 
 .jumbotron {
     text-align: center;
-    background: linear-gradient(to top, #1BADD8, #e005c3a6);
+    background: linear-gradient(to top, #1BADD8, #e005c3f6);
     color: black;
     border-radius: 0;
 }
 
 .container {
-    background-color: yellowgreen;
+    background-color: #7adcfa;
     margin-top: 20px;
     margin-bottom: 80px;
     padding: 40px;
